# komora

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/catalog/: catalog.rs  metadata.rs  mod.rs
tests/: integration_tests.rs
tests/fixtures/catalog/incompatible_version/: catalog_metadata.toml
tests/fixtures/catalog/invalid_metadata/: catalog_metadata.toml
